css fixing footer spacing

--- a/lesson2/css/design.css
+++ b/lesson2/css/design.css
@@ -4,6 +4,7 @@ header {
     color: white;
     font-size: 18pt;
     text-align: center;
+    padding: 1%;
 }
 
 footer{
@@ -12,16 +13,18 @@ footer{
     text-align: center;
 }
 
+main{
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+    align-items: center;
+}
+
 section{
     background-color: #d8dddeef;
     margin: 5%;
     border-color: black;
-    text-align: center;
-    align-items: center;
-    
-}
-img{
-    width: 90%;
+
 }
 
 .sectionheader {
@@ -35,25 +38,30 @@ h3 {
     font-family: 'Raleway', sans-serif;
 }
 
+img{
+    width: 90%;
+}
+
 p {
     font-family: 'Raleway', sans-serif;
 }
 
-main{
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-}
-
 @media screen and (min-width: 600px) {
     main {
-        display: grid;
         grid-template-columns: 1fr 1fr;
+    }
+
+    #contrast {
+        grid-column: 1/3;
     }
 }
 
 @media screen and (min-width: 900px) {
     main {
-        display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    #contrast {
+        grid-column: 3/4;
     }
 }
